fixed spacing in sidebar

--- a/src/nbsap/static/bootstrap/less/layout.less
+++ b/src/nbsap/static/bootstrap/less/layout.less
@@ -139,7 +139,6 @@
 
 .sidebar-submenu {
     margin: .8rem;
-    margin-top: 0;
     display: none;
 }
 
